<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jedzenie">

    <Button
        android:id="@+id/Sw1"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/stolowka1"
        android:textStyle="bold"
        app:icon="@drawable/stolowka"
        app:iconPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sw2"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:text="@string/stolowka2"
        android:textStyle="bold"
        app:icon="@drawable/stolowka"
        app:layout_constraintBottom_toTopOf="@+id/Sw3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sw1" />

    <Button
        android:id="@+id/Sw3"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginBottom="88dp"
        android:text="@string/stolowka3"
        android:textStyle="bold"
        app:icon="@drawable/stolowka"
        app:layout_constraintBottom_toTopOf="@+id/Hilton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Hilton"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:text="@string/hilton"
        android:textStyle="bold"
        app:icon="@drawable/stolowka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>