<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="281dp"
        android:text="@string/menu1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_dialog_dialer"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/Jedzenie"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/Sluzby"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="18dp"
        android:text="@string/jedzenie_na_sto_wkach"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_launcher_adaptive_fore" />

    <Button
        android:id="@+id/Sluzby"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="29dp"
        android:text="@string/s_uzby"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/kalendarz"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/Jedzenie"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="27dp"
        android:text="@string/logowanie"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_lock_idle_lock" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="327dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/_80695558_796830127963962_2693137505634391998_n" />

</RelativeLayout>